<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".MainActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amber_800"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:contentDescription="@string/app_name"
        android:src="@drawable/snake_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_start"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:fontFamily="sans-serif-condensed"
            android:onClick="buttonStartClicked"
            android:text="@string/button_start"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_highscore"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@drawable/button_selector"
            android:fontFamily="sans-serif-condensed"
            android:onClick="buttonHighscoreClicked"
            android:text="@string/button_highscore"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>