<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amber_800"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/snake_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="end"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_textView_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="589"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="end"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:text="@string/snake_length"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_textView_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="26"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="end"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:text="@string/duration"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_textView_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="01:44"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:hint="@string/dialog_username_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

</LinearLayout>